@@ -160,7 +160,7 @@ sub render
 			my $name = $session->html_phrase( $nameid );
 
 			my $helpid = "${datasetid}_fieldhelp_$field_name";
-			my $help = $session->get_lang->has_phrase( $helpid ) ?
+			my $help = $session->get_lang->has_phrase( $helpid, $session ) ?
 				$session->html_phrase( $helpid ) :
 				$session->make_text( "" );
 
@@ -195,12 +195,12 @@ sub render
 		next if $table_name =~ /^cache(\d+)$/;
 
 		my $nameid = "database/name_$table_name";
-		my $name = $session->get_lang->has_phrase( $nameid ) ?
+		my $name = $session->get_lang->has_phrase( $nameid, $session ) ?
 			$session->html_phrase( $nameid ) :
 			$session->html_phrase( "database/name_" );
 
 		my $helpid = "database/help_$table_name";
-		my $help = $session->get_lang->has_phrase( $helpid ) ?
+		my $help = $session->get_lang->has_phrase( $helpid, $session ) ?
 			$session->html_phrase( $helpid ) :
 			$session->html_phrase( "database/help_" );
 
