@@ -581,7 +581,7 @@ sub render_name
 	if( defined $self->{"id"} )
 	{
 		my $phraseid = "searchfield_name_".$self->{"id"};
-		if( $self->{"session"}->get_lang->has_phrase( $phraseid ) )
+		if( $self->{"session"}->get_lang->has_phrase( $phraseid, $self->{"session"} ) )
 		{
 			return $self->{"session"}->html_phrase( $phraseid );
 		}
@@ -622,7 +622,7 @@ sub render_help
 
 	my $custom_help = "searchfield_help_".$self->{"id"};
 	my $phrase_id = "lib/searchfield:help_".$self->{"field"}->get_type();
-	if( $self->{"session"}->get_lang->has_phrase( $custom_help ) )
+	if( $self->{"session"}->get_lang->has_phrase( $custom_help, $self->{"session"} ) )
 	{
 		$phrase_id = $custom_help;
 	}
